--- a/article/sigproc.bib
+++ b/article/sigproc.bib
@@ -71,3 +71,10 @@
 	PAGES = {107-113},
 	MONTH = "January",
 	YEAR = {2008}	}
+
+@BOOK{ullman:massive,
+   author = "Anand Rajaraman and Jure Leskovec and Jeffrey D. Ullman",
+   title = "Mining of Massive Datasets",
+   month = "January",
+   year = {2011}   }
+
