--- a/article/sigproc-sp.tex
+++ b/article/sigproc-sp.tex
@@ -31,12 +31,12 @@
 %
 % 1st. author
 \alignauthor Samet Ayhan\\
-       \affaddr{University of Maryland, Department of Computer Science}\\
+       \affaddr{University of Maryland, Dept. of Computer Science}\\
        \affaddr{College Park, Maryland 20740}\\
        \email{sayhan@cs.umd.edu}
 % 2nd. author
 \alignauthor Joshua Bradley\\
-       \affaddr{University of Maryland, Department of Computer Science}\\
+       \affaddr{University of Maryland, Dept. of Computer Science}\\
        \affaddr{College Park, Maryland 20740}\\
        \email{jgbrad1@cs.umd.edu}
 % 3rd. author
@@ -114,7 +114,7 @@ In order to handle large Wikipedia dumps with the order of tens or hundreds of g
 
 %In order to measure document similarity we use a common LSH technique known as minhashing \cite{}. A minhash signature on a text document is calculated using a parametrized family of hash functions $F_i$, $1 \le i \le N$. In our case input documents are sentences. Each sentence is broken up into n-gram ``shingles''. For each shingle set $S$ we calculate $\{min_{s \in S}(F_i(s)\}$, the set of minimum hashes over the hash family. The signature on a document d is a vector of $K$ minhashes from the set of minimum hashes. In order to minimize false negatives we apply the technique sometimes known as ``banding'' \cite{Ullman} where multiple signatures are produced for each input document.
 
-In order to measure document similarity we use a common LSH technique known as MinHash \cite{}. A minhash signature on a text document is calculated using a parametrized family of hash functions $F_i$, $1 \le i \le N$. In our case, we denote ''documents'' to mean sentences found within the content of Wikipedia articles. Each sentence is broken up into n-gram ``shingles''. For each shingle set $S$ we calculate the set $\{min_{s \in S}(F_i(s)\}$ of minimum hashes over the hash family. The signature on a document $d$ is represented as a vector of $K$ minhashes, chosen from the set $\{min_{s \in S}(F_i(s)\}$ of minimum hashes. In order to minimize false negatives we apply a technique sometimes known as ``banding'' \cite{Ullman} where multiple signatures are produced for each input document.
+In order to measure document similarity we use a common LSH technique known as MinHash \cite{}. A minhash signature on a text document is calculated using a parametrized family of hash functions $F_i$, $1 \le i \le N$. In our case, we denote ''documents'' to mean sentences found within the content of Wikipedia articles. Each sentence is broken up into n-gram ``shingles''. For each shingle set $S$ we calculate the set $\{min_{s \in S}(F_i(s)\}$ of minimum hashes over the hash family. The signature on a document $d$ is represented as a vector of $K$ minhashes, chosen from the set $\{min_{s \in S}(F_i(s)\}$ of minimum hashes. In order to minimize false negatives we apply a technique sometimes known as ``banding'' \cite{ullman:massive} where multiple signatures are produced for each input document.
 
 \subsection{Design}
 Since signature techniques such as LSH are embarrassingly parallel, we designed our algorithm around the MapReduce framework.
@@ -172,15 +172,6 @@ Minhash MapReduce pseudocode:
 \subsection{Implementation Details}
 
 Our implementation is built on top of the Apache Hadoop MapReduce framework, using utilities from the Cloud9 library for parsing Wikipedia page text from the Wikipedia XML dump format. Sentences are parsed out over each document using a regular expression. Sentences that are too large or too small are discarded. The family of hash functions is implemented using a ``Multiply Shift''  \cite{} hashing scheme and is generated from a random seed using the Java Random class. The hash family is also parametrized by hash output key size and this value can be configured to affect the size of the output signatures.
-
-\section{Working Application}
-We explain the working application here...
-
-\begin{figure}
-\centering
-\epsfig{file=figure1.eps,height=1in,width=2.2in}
-\caption{Workflow within MapReduce Framework.}
-\end{figure}
 
 \section{Parameter Tuning}
 
@@ -250,26 +241,7 @@ As we would expect, Jaccard similarity decreases as edit distance increases, but
 
 
 \section{Experiments and Discussion}
-In this section, we discuss some of the issues we encountered regarding data representation, and archived data loading. We also present the performance optimizations we realized.
-
-\subsection{Optimization}
-
-We explain optimizations here...
-
-\subsubsection{Optimization-1}
-
-An optimization we realized...
-
-\subsubsection{Optimization-2}
-Another optimization we realized...
-
-\begin{figure*}
-\centering
-\epsfig{file=figure2.eps,height=1.5in,width=7in}
-\caption{Some figure.}
-\end{figure*}
-
-Illustrated in Figure 2, explain the figure here...
+In this section, we discuss ...
 
 \section{Conclusion and Future Work}
 This paper presents our work on near-duplicate detection of Wikipedia articles at various granularity levels using LSH technique. Our novel MapReduce algorithm tackles the problem by transforming it into more manageable pieces where each piece handled in parallel. Our unique contribution includes empirical analysis of signatures belonging to Wikipedia articles at k-gram level. Experimental results verify that the proposed method is able to effectively and efficiently detect similar articles.
