--- a/article/sigproc.bib
+++ b/article/sigproc.bib
@@ -73,8 +73,7 @@
 	YEAR = {2008}	}
 
 @BOOK{ullman:massive,
-   author = "Anand Rajaraman and Jure Leskovec and Jeffrey D. Ullman",
-   title = "Mining of Massive Datasets",
-   month = "January",
-   year = {2011}   }
-
+   AUTHOR = "Anand Rajaraman and Jure Leskovec and Jeffrey D. Ullman",
+   TITLE = "Mining of Massive Datasets",
+   MONTH = "January",
+   YEAR = {2011}   }
