Added back working application section

--- a/article/sigproc-sp.tex
+++ b/article/sigproc-sp.tex
@@ -239,6 +239,16 @@ As we would expect, Jaccard similarity decreases as edit distance increases, but
 \label{ed-grid}
 \end{figure*}
 
+\section{Working Application}
+\begin{itemize}
+\item MinhashWikipediaPages
+\item DedupSentences
+\item MergeClusters
+\item GetSentenceClusters
+\item Edit Distance Filter
+\end{itemize}
+
+\subsection{Limitations of Approach}
 
 \section{Experiments and Discussion}
 In this section, we discuss ...
