--- a/article/sigproc-sp.tex
+++ b/article/sigproc-sp.tex
@@ -202,23 +202,24 @@ where $l$ is relative shingle size and $e$ is normalized edit distance.
 Note that as relative shingle size goes to 0 there is a nice convergence for Jaccard similarity:
 \[\lim_{l->0}J(X,Y) = \frac{1 - e}{1 + e}\]
 
-\begin{figure*}
+\begin{figure}
 \centering
-\epsfig{file=jac-ed-chart.eps, height=4in, width=6in}
+\includegraphics[width=3.5in, keepaspectratio = true]{jac-ed-chart.png}
+%\epsfig{file=jac-ed-chart.eps, height=4in, width=6in}
 \caption{Jaccard Similarity vs. normalized edit distance.}
 \label{jac-ed}
-\end{figure*}
+\end{figure}
 
-As we would expect, Jaccard similarity decreases as edit distance increases, but it also decreases as shingle length increases. Figure \ref{fig:jac-ed} shows Jaccard Similarity plotted against edit distance for $l = .05$ and $l = .2$. At $l = .05$ and $e = .2$ our estimate for Jaccard similarity has already fallen to the range [0.58,0.65]. Clearly setting $l$ too high can increase the false positive rate, but setting $l$ too low will increase the false positive rate, since it will increase the size of the intersection of the shingle sets.
+As we would expect, Jaccard similarity decreases as edit distance increases, but it also decreases as shingle length increases. Figure \ref{jac-ed} shows Jaccard Similarity plotted against edit distance for $l = .05$ and $l = .2$. At $l = .05$ and $e = .2$ our estimate for Jaccard similarity has already fallen to the range [0.58,0.65]. Clearly setting $l$ too high can increase the false positive rate, but setting $l$ too low will increase the false positive rate, since it will increase the size of the intersection of the shingle sets.
 
 \subsection{False positives}
 
-\begin{figure*}
+\begin{figure}
 \centering
-\epsfig{file=edgrid.eps,width=7in}
+\epsfig{file=edgrid.eps,width=3.5in}
 \caption{}
 \label{ed-grid}
-\end{figure*}
+\end{figure}
 
 \section{Working Application}
 \begin{itemize}
@@ -245,13 +246,24 @@ From the perspective of editing/writing Wikipedia articles, this is a strong ind
 \item Obama had an approval rating of 46\% by the end of his term in 2012.
 \end{itemize}
 
+\begin{figure}
 \begin{center}
 \includegraphics[scale=0.43, keepaspectratio = true]{Top10ArticlePairs.jpg}
 \end{center}
+\caption{Top 10 Similarity Counts}
+\label{toparticles}
+\end{figure}
 
 Based on our preliminary analysis, templatification and factual drift tends to occur most often between articles that maintain large lists of information related to the same general sub-theme of different topics. For example, of the top 10 pairs of articles with the highest similarity count, one article pair was the articles titled ''List of birds of Zambia'' and ''List of birds of Tanzania''. With both countries sharing the same geographic region, it is not unexpected that their respective wikipedia articles on the countrys' bird species would be highly comparable. For clarity purposes, we define \emph{similarity count} as simply the total number of sentences between two articles that were found to share the same hash signature. Overall, we found $\approx 6500$ wikipedia article pairs that had a similarity count greater than $50$.
 
-After performing minhash on all of Wikipedia, we were able to cluster all unique sentences. Looking at the distribution of cluster sizes in FIGURE SARAH'S HISTOGRAM, we can see the expected behavior of monotonically decreasing number of clusters of size $k$ as $k$ grows large. What is unusual though is the number of relatively large clusters in the size range of $[25, 65]$. Based on the fact that we found $\approx 6500$ article pairs with a similarity count greater than $50$, this would indicate that there are collections of articles that have a large number of near-duplicate sentences in common. As can be seen in the Top 10 similarity counts, there can even be chains of articles that share large portions of their content with each other (a chain of 3 is demonstrated in TOP 10 SIMILARITY COUNTS FIGURE).
+After performing minhash on all of Wikipedia, we were able to cluster all unique sentences. Looking at the distribution of cluster sizes in FIGURE SARAH'S HISTOGRAM \ref{clust}, we can see the expected behavior of monotonically decreasing number of clusters of size $k$ as $k$ grows large. What is unusual though is the number of relatively large clusters in the size range of $[25, 65]$. Based on the fact that we found $\approx 6500$ article pairs with a similarity count greater than $50$, this would indicate that there are collections of articles that have a large number of near-duplicate sentences in common. As can be seen in the Top 10 similarity counts, there can even be chains of articles that share large portions of their content with each other (a chain of 3 is demonstrated in Figure \ref{toparticles}).
+
+\begin{figure}
+\centering
+\includegraphics[width=3.5in, keepaspectratio = true]{clusterhistogram.png}
+\caption{Histogram of Cluster Sizes (log scale).}
+\label{clust}
+\end{figure}
 
 
 \section{Conclusion and Future Work}
