--- a/article/sigproc.bib
+++ b/article/sigproc.bib
@@ -15,7 +15,7 @@
 @INPROCEEDINGS{broder:resemblance,
 	AUTHOR = "Andrei Z. Broder",
 	TITLE = "On the Resemblance and Containment of Documents",
-	BOOKTITLE = "In Compression and Complexity of Sequences (SEQUENCES’97}",
+	BOOKTITLE = "In Compression and Complexity of Sequences (SEQUENCES’97)",
 	PAGES = "21-29",
 	YEAR = {1997}	}
 
